write(ch04, 05): 第4章と5章の内容を一旦見出し以外は消した

--- a/draft/ch04.md
+++ b/draft/ch04.md
@@ -1,205 +1,9 @@
-# CSSでWebサイトの見た目を良くする
+# トップページを作る
 
-この章では、HTMLを使ってマークアップしたサイトの見た目をCSSによって整えます。
+## カルーセル部分のマークアップ
 
-## 準備
+## ページネーション部分のマークアップ
 
-はじめに、HTML側でCSSファイルを読み込みます。しかし、実はもう読み込むようになっています。
-それがhead要素内に書いた以下の記述です。これはBootstrapと自分が書いたCSSを読み込んでいることになります。
+## CSSでスタイルを整える
 
-```html
-<link rel="stylesheet" href="styles/bootstrap.min.css">
-<link rel="stylesheet" href="styles/main.css">
-```
-
-HTMLファイルが置かれているフォルダーにstylesというフォルダーを作ります。その中にbootstrap.min.cssとmain.cssを置けばCSSファイルが読み込まれます。
-
-## なぜHTMLとは別ファイルにするのか
-
-CSSは別途CSSファイルを読み込ませる以外に、2つ用意する方法があります。
-1つめがHTML内でstyle要素を定義する方法です。
-2つめがHTMLの要素にstyle属性を定義する方法です。
-
-HTML内でstyle要素を定義する例：
-
-```html
-<style>
-    p {
-        color: red;
-    }
-</style>
-```
-
-HTMLの要素にstyle属性を定義する例：
-
-```html
-<p style="color: red;">テスト</p>
-```
-
-いくつか方法はある中で、CSSファイルを読みこませる方法が最良な理由として、2つあります。
-
-1つめは、文書構造と見た目の定義を分離させることです。特にstyle属性でスタイル定義をした場合、HTML内に見た目の定義も混ざってしまいます。
-CSSを別ファイルにすることで、文書構造と見た目の定義が分離でき、管理しやすくなります。
-
-次に、サイト全体の表現を統一しやすいことです。
-たとえば各ページでstyle要素内へCSSを書く場合について考えます。この場合、各ページでスタイル定義の不統一になる確率が高くなります。
-
-## プロパティと値
-
-CSSでは「プロパティ」が「適用するスタイル」を示し「値」は「適用する値」です。具体例をソースコードで示すと以下のとおりです。
-
-```css
-.test {
-    /* プロパティ: 値 */
-    /* 背景色: 白 */
-    background-color: #fff;
-}
-```
-
-## セレクタについて
-
-セレクタとはHTML内の特定要素に合致するパターンを指します。
-[セレクタ Level3の2.セレクタ](http://standards.mitsue.co.jp/resources/w3c/TR/css3-selectors/#selectors)を見ると分かるように多種多様なセレクタがあります。
-
-しかし、よく使うものは限られてます。ここでは、そのよく使う以下のセレクタについて解説していきます。
-
-- 要素セレクタ
-- IDセレクタ
-- クラスセレクタ
-- 子孫セレクタ
-- 子セレクタ
-- ユーザーアクション擬似クラス
-
-## 要素セレクタ
-
-指定した要素があるか探してスタイルを適用するものです。
-
-```css
-/* 全ての p 要素 */
-p {
-    color: #333;
-}
-
-/* 全ての h1 要素 */
-h1 {
-    font-size: 16px;
-}
-```
-
-## IDセレクタ
-
-id属性が指定されたHTMLの要素に対し、スタイルを適用するものです。なお、id属性の値は一意となります。
-id属性を指定した要素へ、スタイル適用する例が次の例です。
-
-```html
-<header id="global-header">
-    <h1 id="site-title">テストテスト</h1>
-</header>
-```
-
-```css
-#global-header {
-    background-color: #ccc;
-}
-
-#site-title {
-    color: #333;
-}
-```
-
-## クラスセレクタ
-
-class属性が指定されたHTMLの要素に対し、スタイルを適用するものです。IDセレクタとは違い、同じHTML内で同じclass属性の値を指定することができます。
-
-```html
-<divclass="nav-bar"></div>
-```
-
-```css
-.nav-bar {
-    background-color: #ccc;
-}
-```
-
-## 子孫セレクタ
-
-子孫要素に対してスタイルを適用するものです。まず子孫要素について説明します。
-たとえば、次のHTMLがあったとします。
-
-```html
-<divclass="nav-bar">
-    <ul>
-        <li><a href="/">トップ</a></li>
-        <li><a href="livestage.html">ライブステージ</a></li>
-    </ul>
-</div>
-```
-
-この場合 `nav-bar` という値のclass属性を指定しているdiv要素からすると、ul要素は子要素になります。
-また、li要素は孫要素の関係になります。li要素内のa要素はひ孫要素になります。
-この時、li要素の文字色を赤にしたい時は次のように書きます。
-
-```css
-.nav-bar li {
-    color: red;
-}
-```
-
-前述したCSSは、文字色を赤にするよう定義しています。適用対象は `nav-bar` というクラスが指定されている `div` 要素の子要素である `li` 要素になります。
-
-## 子セレクタ
-
-子要素のみに限定してスタイルを適用するものです。
-たとえば次のHTML内にある `li` 要素全てへ対しては文字色を変更したくないという要望が来たとします。
-
-```html
-<divclass="nav-bar">
-    <ul>
-        <li><a href="/">トップ</a></li>
-        <li>
-            <a href="livestage.html">ライブステージ</a>
-            <ul>
-                <li><a href="muse.html">μ's</a></li>
-                <li><a href="arise.html">A-RISE</a></li>
-            </ul>
-        </li>
-    </ul>
-</div>
-```
-
-この場合、次のように大なり括弧で `li` 要素を指定すれば、トップとライブステージだけ文字色が赤くなります。
-
-```css
-.nav-bar ul > li {
-    color: red;
-}
-```
-
-## ユーザーアクション擬似クラス
-
-サイトの利用者がおこなった行動に対して、スタイルを適用するものです。`:hover`, `:active`, `:focus` があります。
-
-`:hover` はある要素をマウスカーソルなどで示した場合に適用されるものです。
-例えば、リンクをマウスカーソルで指したとします。
-この場合、文字色の変更などで、その要素をいま指しているということが示せます。
-
-`:active` はある要素を選択した時に適用されます。
-例えば、マウスカーソルである要素を選択したとします。
-この場合、マウスから指を離すまでは `:active` で指定されたスタイルが適用されます。
-
-`:focus` はある要素を選択した時に適用されます。
-`:active` と違うところは、入力フォームを選択した時にスタイルが適用されます。
-また、キーボードのtabキーでリンクを選択した時にスタイルが適用されるということです。
-
-## スタイル適用の優先度
-
-スタイルの適用には優先度があります。優先度は、定義されているセレクタの数や種類によって決まります。
-
-- style属性の数を `a` として数える
-- IDセレクタの数を `b` として数える
-- セレクタ内のクラスセレクタ（`.foo`）、属性セレクタ（例：`[id="foo"]`）、擬似クラス（例：`:hover`）の数を `c` として数える
-- 型セレクタ（要素そのものを指定する）、擬似要素（`::before`, `::after`など）の数は `d` として数える
-
-この中でも、style属性が1番強く、IDセレクタはその次に強いということを覚えておけばなんとかなります。
-
-なお `!important` を書くと、この優先度は関係なくなります。`!important` は強力すぎるため、限られた場所のみ使うのがいいでしょう。
+## JavaScriptでカルーセルが動くようにする
