write(ch05): 第5章初校

--- a/draft/ch04.md
+++ b/draft/ch04.md
@@ -1,7 +1,7 @@
 # トップページを作る
 
-前の章では共通の構造部分を作っていきました。
-第3章で作ったHTMLを元に、この章ではトップページを作っていきます。
+第3章では共通の構造部分を作っていきました。
+そこで作ったHTMLを元に、この章ではトップページを作っていきます。
 
 はじめに、第3章の共通部分ではヘッダーやフッターなどはマークアップしましたが、`main`要素の中身は空だったと思います。
 この章では、空のままだった`main`要素の中をHTMLでマークアップしていきます。
@@ -10,6 +10,8 @@
 <main>
 </main>
 ```
+
+## トップページ全体の見た目を整える
 
 ## カルーセル部分のマークアップ
 
