fix(ch03): components => external refs #79

--- a/draft/ch03.md
+++ b/draft/ch03.md
@@ -25,11 +25,11 @@
 ## ファイル構成
 
 今回作成するサイトのファイル構成を考えていきます。
-ファイル構成は次のとおりとなります。ディレクトリーとしては`components`・`styles`・`scripts`・`images`の4つがあり、その中に各ファイルを置く想定です。
+ファイル構成は次のとおりとなります。ディレクトリーとしては`external`・`styles`・`scripts`・`images`の4つがあり、その中に各ファイルを置く想定です。
 
 ```
 /
-├- components
+├- external
 ├- styles
 │  └ main.css
 ├- scripts
@@ -41,7 +41,7 @@
 
 各ディレクトリーには、以下の規則に則ってファイルを置きます。
 
-- components
+- external
   - CSS・JavaScript問わず、ライブラリを置くディレクトリ
 - styles
   - CSSファイルを置くディレクトリ
@@ -76,9 +76,9 @@
   <meta name="description" content="ラブライブ！の参加者募集サイトです">
   <meta name="keywords" content="ラブライブ,特設サイト">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="components/Nico/bootstrap.min.css">
+  <link rel="stylesheet" href="external/Nico/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
-  <script src="components/lory/lory.min.js" defer></script>
+  <script src="external/lory/lory.min.js" defer></script>
 </head>
 
 <body>
@@ -191,9 +191,9 @@
   <meta name="description" content="ラブライブ！の参加者募集サイトです">
   <meta name="keywords" content="ラブライブ,特設サイト">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="components/Nico/bootstrap.min.css">
+  <link rel="stylesheet" href="external/Nico/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
-  <script src="components/lory/lory.min.js" defer></script>
+  <script src="external/lory/lory.min.js" defer></script>
 </head>
 
 <body>
