fix(ch03): HTMLファイルをファイル構成の中に入れ忘れていたのを修正 refs #79

--- a/draft/ch03.md
+++ b/draft/ch03.md
@@ -25,10 +25,13 @@
 ## ファイル構成
 
 今回作成するサイトのファイル構成を考えていきます。
-ファイル構成は次のとおりとなります。ディレクトリーとしては`external`・`styles`・`scripts`・`images`の4つがあり、その中に各ファイルを置く想定です。
+ファイル構成は次のとおりとなります。`index.html`はトップページ、`livestage.html`はライブステージ用のHTMLとなります。
+ディレクトリーとしては`external`・`styles`・`scripts`・`images`の4つがあり、その中に各ファイルを置く想定です。
 
 ```
 /
+├- index.html
+├- livestage.html
 ├- external
 ├- styles
 │  └ main.css
