fix(ch03): role属性はいらないので削除した refs #79

--- a/draft/ch03.md
+++ b/draft/ch03.md
@@ -105,7 +105,7 @@
 これはBootstrapで定義されているクラス名と競合しないように、安全策で接頭辞を付けています。
 
 ```html
-<header id="ll-header" class="navbar navbar-default" role="banner">
+<header id="ll-header" class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <h1 class="navbar-brand ll-logo">LoveLive!</h1>
@@ -167,7 +167,7 @@
 しかし、フッター内にページネーションを含めるのは一般的でないため、特にマークアップしません。
 
 ```html
-<footer id="ll-footer" class="navbar navbar-default" role="contentinfo">
+<footer id="ll-footer" class="navbar navbar-default">
   <div class="container-fluid">
     <p class="nav navbar-text navbar-left">
       このサイトは<a href="http://startdash.o2p.jp/">サイト制作のSTART:DASH!!</a>用に作られたものであり、プロジェクトラブライブ！とは関係ありません。
@@ -200,7 +200,7 @@
 </head>
 
 <body>
-<header id="ll-header" class="navbar navbar-default" role="banner">
+<header id="ll-header" class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <h1 class="navbar-brand ll-logo">LoveLive!</h1>
@@ -232,7 +232,7 @@
 <main>
 </main>
 
-<footer id="ll-footer" class="navbar navbar-default" role="contentinfo">
+<footer id="ll-footer" class="navbar navbar-default">
   <div class="container-fluid">
     <p class="nav navbar-text navbar-left">
       このサイトは<a href="http://startdash.o2p.jp/">サイト制作のSTART:DASH!!</a>用に作られたものであり、プロジェクトラブライブ！とは関係ありません。
