Update ch02.md (「サイト開発では、」を追加）
何において必要なのかが読みにくかったです

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -1,10 +1,10 @@
 # サイト開発の準備
 
-この章では、ラブライブ募集サイトの実装にあたって、どんなことを事前に準備していけばいいかを書いていきます。
+この章では、ラブライブ！募集サイトの実装にあたって、どんなことを事前に準備していけばいいかを書いていきます。
 
 ## 必要なツールの準備
 
-はじめに、ラブライブ募集サイトの実装で必要なツールを準備します。
+はじめに、ラブライブ！募集サイトの実装で必要なツールを準備します。
 最低限必要なものを列挙していくと以下のものがあります。
 
 - ソースコードを書くためのエディターもしくはIDE
@@ -26,7 +26,7 @@ IDEはWebStormやNetBeansがよく使われています。
 2つめに必要なものとして、作ったサイトの表示確認用にブラウザーを用意します。
 WindowsやOS Xには次のブラウザーが最初からインストールされています。
 
-しかし、これらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。
+しかし、サイト開発では、これらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。
 他にインストールしておいたほうが良いブラウザーはGoogle ChromeやMozilla Firefoxがあります。
 できれば、開発版をインストールしておくと、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。
 
@@ -154,10 +154,10 @@ flipsnap.jsはドキュメントに次の項目がよくまとまっています
 
 今回、CSSのライブラリは[Bootstrap](https://github.com/twbs/bootstrap)のテーマである、[Nico](http://kubosho.github.io/Nico/)を使います。
 
-選定した理由としては、今回デザイナーがいない中、ラブライブ参加者募集サイトの見た目をアニメに近づけたいという思いがありました。
-ラブライブ参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているため、Bootstrapを使うことにしました。
+選定した理由としては、今回デザイナーがいない中、ラブライブ！参加者募集サイトの見た目をアニメに近づけたいという思いがありました。
+ラブライブ！参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているため、Bootstrapを使うことにしました。
 
-また、ラブライブ参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。
+また、ラブライブ！参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。
 なので、今回のために[Honoka - 日本語も美しく表示できるBootstrapテーマ](http://honokak.osaka/)というbootstrapのテーマを元にNicoというBootstrapを作りました。
 
 ## ライブラリの選定JavaScript編
