Update ch02.md (誤字を修正し文章を改変)
誤字を直したら「企画に聞いても」と「企画へ聞いても」となってしまい、職業を表しているように見えなかったため、
「エンジニア以外の人」に変更してみました。

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -81,7 +81,7 @@ CSSやJavaScriptは、2011年以前の情報があまり役に立ちません。
 聞き方としてはおそらく解答にかかるであろう時間を予測して、「『○○』について聞きたいのですが、×分ほど時間はありますか」と聞くのがいいです。
 この「○○」に入る言葉は、たとえば「ある機能の実装方法」ということが入ると思います。
 
-また、聞く相手を間違えないようにします。たとえば、プログラムのことを企画へに聞いても、ほとんどの場合は求める回答が返ってこないと思います。
+また、聞く相手を間違えないようにします。たとえば、プログラムのことをエンジニア以外の人に聞いても、ほとんどの場合は求める回答が返ってこないと思います。
 
 ## ライブラリ選定
 
