--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -1,35 +1,41 @@
 # Webサイトの企画をしてみよう
 
-この章では、Webサイトを作る際におこなう、要件定義と要素整理について解説します。
+この章では、Webサイトの要件定義と要素整理について解説します。
 
-## 要件を定義する
+## 要件定義をする
 
-Webサイト制作が始まる前に、要件定義という工程をおこないます。そこでは、以下の内容を要件定義します。
+Webサイト制作の前に要件定義をします。要件定義では次の内容を決めます。
 
 - どんなWebサイトを作るか
 - どんな機能が必要か
 
-それぞれ、大まかではなく細かく書いたほうが良いです。
+それぞれ、大まかではなく細かく書くのがいいです。
 
 ### なぜ要件定義をするのか
 
-最初に要件定義をすることで、企画書の変更頻度が減ります。
-これにより作業の巻き戻りを最小限に抑えることができるだけでなく、「あれも入れたい」といった思いつきのアイデアに影響されず、一気にWebサイトを作ることが可能です。
+最初に要件定義をすることで、企画書の更新頻度を減らすことができます。
+このことで「これも入れたい」といった思いつきのアイデアに影響されず、作業を巻き戻すことが最小限に抑えられます。
+これにより一気にWebサイトを作ることが可能です。
 
-### 今回の要件定義について
+### ラブライブ!参加者募集サイトの要件定義
 
-では実際に要件定義をしていきます。例として「ラブライブ!参加者募集サイト」で説明します。
+では実際に要件定義をしていきます。
+まず、どんなWebサイトを作るかというところから始めます。今回は「ラブライブ!」という、アイドルコンテストの募集サイトを作ります。
 
-まず、どんなWebサイトを作るかというところから始めます。今回は「ラブライブ！」という、アイドルコンテストの募集サイトを作ります。
-手順としては、まずはターゲットユーザーを定義します。そして、ターゲットユーザーにどんな体験を与えたいのか考えます。
-今回は、工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。
-このような判断も、要件定義の一部です。
+手順としてはまずターゲットユーザーを定義します。そしてターゲットユーザーにどんな体験を与えたいのか考えます。
+今回は主に見てもらいたいユーザーとして、スクールアイドルが挙げられます。
+この参加者募集サイトを見た後にスクールアイドルが応募してくれるような体験を作ることが大事です。
+
+次は機能です。今回は工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。
+このように期限と実装期間から現実的な妥協をする判断も要件定義の一部です。
 
 ## 要素を整理する
 
-Webサイト内にある、ボタン・画像・テキストなど、さまざまな情報表示・動作するものをWebサイトの「要素」と呼びます。
-どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。そのため合理的なのか判断するためにターゲットユーザーの分析が必要となります。
-ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え、設計するべきです。例えば、以下のことが考えられます。
+Webサイト内のボタン・画像・テキストなど、さまざまな情報表示・動作するものをWebサイトの「要素」と呼びます。
+どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。
+そのため要素を置く場所が合理的なのか判断するため、ターゲットユーザーの分析が必要となります。
+ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え設計するべきです。
+たとえば以下のことが考えられます。
 
 - ターゲットユーザーがよく使いそうなボタン・機能をクリックしやすいところへ置く
 - ユーザーへ一番伝えたいことを見やすいところに置く
