fix(ch01): キャプチャ => キャプチャ画像

--- a/draft/ch03.md
+++ b/draft/ch03.md
@@ -5,7 +5,7 @@
 
 ## 共通の構造を洗い出し
 
-トップページやライブステージのアニメ画像キャプチャから共通構造を抜き出すと、次に挙げる3つが共通構造となります。
+トップページやライブステージのアニメキャプチャ画像から共通構造を抜き出すと、次に挙げる3つが共通構造となります。
 
 - ヘッダー
 - グローバルナビゲーション
@@ -162,7 +162,7 @@
 ヘッダー、グローバルナビゲーションと来たので、最後にフッターをマークアップしていきます。
 ここには著作権情報やプライバシーポリシー、サイトマップといったリンクを追加します。
 
-また、アニメの画像キャプチャを見ると、フッター部分には「●○○○○」のような表示があります。
+また、アニメのキャプチャ画像を見ると、フッター部分には「●○○○○」のような表示があります。
 これはページネーションといわれる、ある要素内にどれだけの要素が内包されているかを示すものです。
 しかし、フッター内にページネーションを含めるのは一般的でないため、特にマークアップしません。
 
