fix(ch01): を下がります => 下げることができます

--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -13,7 +13,7 @@
 
 ### なぜ要件定義をするのか
 
-最初に要件定義をすることで、企画書の更新頻度を下がります。
+最初に要件定義をすることで、企画書の更新頻度を下げることができます。
 このことで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。
 これにより一気にサイトを作ることが可能です。
 
