--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -1,6 +1,6 @@
 # サイト開発の準備
 
-この章では、ラブライブ!募集サイトの実装にあたって、どんなことを事前に準備していけばいいかを書いていきます。
+この章ではラブライブ!募集サイトを実装する前の準備について書きます。
 
 ## 必要なツールの準備
 
@@ -15,15 +15,15 @@
 
 ### エディターやIDE
 
-ひとつめに必要なものとして、ソースコードを書くためにエディターやIDE（統合開発環境）を用意します。
-エディターはAtomやSublime Textがよく使われています。
+必要な物のひとつ目として、ソースコードを書くためにエディターやIDE（統合開発環境）を用意します。
 
+エディターはWindow・OS X共にAtomやSublime Textがよく使われています。
 IDEはWebStormやNetBeansがよく使われています。
 またWindowsであればVisual Studio Community EditionがおすすめのIDEです。
 
 ### ブラウザー
 
-ふたつめに必要なものとして、作ったサイトの表示確認用にブラウザーを用意します。
+必要な物のふたつ目として、サイトを表示確認するためにブラウザーの用意をします。
 WindowsやOS Xには次のブラウザーが最初からインストールされています。
 
 しかしサイト開発ではこれらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。
@@ -37,112 +37,112 @@ WindowsやOS Xには次のブラウザーが最初からインストールされ
 
 ### GitとGitHub
 
-3つめに必要なものとして、作業履歴を管理するためにGitとGitHubを用意します。
+必要な物の3つ目として、作業履歴を管理するためにGitとGitHubを用意します。
 たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。
 
-そのとき、適切に作業履歴を残すことで、かなり前の作業まで遡ってしまうことが少なくなります。
+その時Gitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。
 GitはSourceTreeをダウンロードして使うのが良いでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。
 
 ## 分からないことがあった時には？
 
 サイトの実装をしていくうちに、分からないところが出てくる場合もあります。
-分からないこととして、たとえば「固有名詞が何を示すものなのか分からない」「必要とされている機能を実現する方法が分からない」「なぜエラーになるのか分からない」が挙げられます。
-そういった際、どのように解決するかを書きます。
+
+たとえば「固有名詞が何を示すものなのか分からない」「必要とされている機能を実現する方法が分からない」「なぜエラーになるのか分からない」が挙げられます。
+
+そういった際どのように解決するかを書きます。
 
 ### 検索する
 
-まずは検索します。検索する方法にも結果が出やすい手法はいくつかあります。
+まずは検索します。検索した時に結果が出やすい手法は3つあります。
 
-まずひとつめの手法として、たとえば`CSSで背景色をつけるやり方`と検索するより、`CSS 背景色 やり方`で検索するほうが検索結果の件数は増えます。
+手法のひとつ目として`CSSで背景色をつけるやり方`と検索するより、`CSS 背景色 やり方`のように単語で区切るほうが検索結果の件数は増えます。
 検索エンジンは`CSSで背景色をつけるやり方`のような文章が苦手です。
-そのため、文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。
+そのため文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。
 
-ふたつめの手法として、より入門的な内容を探したい場合、`○○ とは`で検索するのが良いです。
-理由は、入門的な記事のタイトルが`○○ とは`と書く傾向にあるためです。
+また、より入門的な内容を探したい場合`○○ とは`で検索するのがいいです。
+理由は入門的な記事のタイトルが`○○ とは`と書く傾向にあるためです。
 たとえばJavaScriptの初心者向け記事を探したい場合は`JavaScript とは`といった感じで検索します。
 
-3つめの手法として、JavaScriptでエラーメッセージが出力された場合、エラーメッセージをそのまま検索することです。
+手法のふたつ目として、JavaScriptでエラーメッセージが出力された場合、エラーメッセージをそのまま検索することです。
 エラーメッセージをそのまま検索することで、解決方法が出てきやすいです。
-しかし、だいたい英語（そしてほとんどStack Overflowというサイト）なので、そこは頑張って内容を読み取るしかないです。
+しかしだいたい英語（そしてほとんどStack Overflowというサイト）なので、そこは頑張って内容を読み取るしかないです。
 
-4つめの手法として、Google検索結果内にある`検索ツール - 期間指定`を使って、なるべく新しい情報のみ検索します。
-CSSやJavaScriptは、2011年以前の情報があまり役に立ちません。
-そのため、期間を絞ることで新しい情報にたどりつきやすくします。
+手法の3つ目として、Google検索結果内にある`検索ツール - 期間指定`を使ってなるべく新しい情報のみ検索します。
+CSSやJavaScriptは2011年以前の情報があまり役に立ちません。
+期間を絞ることで新しい情報にたどりつきやすくします。
 
-しかし、初期状態では期間設定の使い勝手があまりよくありません。具体的には、期間設定が`1ヶ月`の後は`1年`となってしまうため、たとえば`3ヶ月以内`などは指定できません。
+しかし、初期状態では期間設定の使い勝手があまりよくありません。
+具体的には期間設定が`1ヶ月`の後は`1年`となってしまうため`3ヶ月以内`などは指定できません。
 これに関しては[Add Search Options](https://chrome.google.com/webstore/detail/add-search-options/kaifgnoibnjldmdkkfogenbfbfgcbiao?hl=ja)というGoogle Chrome拡張機能を使います。
 この拡張機能を使うことにより、期間指定に`3ヶ月以内`と`6ヶ月以内`が増えます。
 
 ### 周りの人に聞く
 
-検索をしても、あまりいい情報に巡りあえない場合があります。そういった場合、周りに聞ける環境であれば聞くのがいいです。
+検索をしてもいい情報に巡りあえない事があります。その場合、周りに聞ければ聞いたほうがいいです。
 
-聞く前に、まずは検索したり問題の概要をまとめます。これにより聞く側にとらせる時間が少なくなります。
+聞く前にまずは検索したり問題の概要をまとめます。これにより聞く側にとらせる時間が少なくなります。
 聞き方としてはおそらく解答にかかるであろう時間を予測して、「『○○』について聞きたいのですが、×分ほど時間はありますか」と聞くのがいいです。
 この「○○」に入る言葉は、たとえば「ある機能の実装方法」ということが入ると思います。
 
-また、聞く相手を間違えないようにします。
+また聞く相手を間違えないようにします。
 たとえばプログラムのことをエンジニア以外に聞いても、ほとんどの場合は求める回答が返ってこないと思います。
 
 ## ライブラリ選定
 
-ここまで、開発に必要なツールや開発の際に分からないことがあったときの対処法を書きました。
-ここからは、今回のサイトを実装するにあたり必要な、CSSやJavaScriptのライブラリ選定をおこなっていきます。
+ここまで開発に必要なツールや開発の際に分からないことがあったときの対処法を書きました。
+ここからは今回のサイトを実装するにあたり必要な、CSSやJavaScriptのライブラリ選定をおこなっていきます。
 
 ### ライブラリとは
 
-その前に、ライブラリという聞き慣れない単語が出て「??」となった人もいるかもしれません。
-なので、ライブラリについて説明します。
+ライブラリという聞き慣れない単語が出て「??」となった人もいるかもしれません。
+選定の前にライブラリについて説明します。
 
-ライブラリとは、汎用性が高いプログラムを、他のプログラムからも使えるようにひとまとまりとしたものです。
-たとえば、CSSであればBootstrapやFoundation、JavaScriptでいえばjQueryなどがライブラリです。
+ライブラリは、汎用性が高いプログラムを他のプログラムからも使えるようにひとまとまりとしたものです。
+たとえばCSSであればBootstrapやFoundation、JavaScriptでいえばjQueryなどがライブラリです。
 いまあなたが見ているこの文章も、自動的に日本語の文章をチェックする[textlint](https://github.com/textlint/textlint)というライブラリを使い、自動校正しながら書いています。
 
 ### ライブラリを選ぶ基準
 
-ライブラリについて説明したところで、自分がライブラリを選ぶ時の基準について、いくつか書いていきます。
+ライブラリについて説明したところで、自分がライブラリを選ぶ時の基準について、いくつか書きます。
 
 #### 利用実績
 
-ひとつめの基準として、そのライブラリが広く使われているかを見ます。
-理由は、ライブラリを使う上で何か困って検索をしたときに情報が出てきやすいためです。
+基準のひとつ目として、そのライブラリが広く使われているかを見ます。
+広く使われていれば、ライブラリを使う上で何か困って検索をしたときに情報が出てきやすいためです。
 
-たとえばCSSのライブラリである[Bootstrap](http://getbootstrap.com/)だと、ページ下部にBootstrapを使ったサイト一覧が掲載されています。
-またJavaScriptのライブラリである[jQuery](http://jquery.com/)は、[Amazon上でjQueryで検索](http://www.amazon.co.jp/s/field-keywords=jquery)すると、jQuery関連の本が大量に表示されます。
+たとえばCSSのライブラリである[Bootstrap](http://getbootstrap.com/)だとページ下部にBootstrapを使ったサイト一覧が掲載されています。
+JavaScriptのライブラリである[jQuery](http://jquery.com/)は[Amazon上でjQueryで検索](http://www.amazon.co.jp/s/field-keywords=jquery)するとjQuery関連の本が大量に表示されます。
 
-このように、利用実績やライブラリについて本が書かれているかということをまずは見ます。
+このように、利用実績やライブラリについて本が書かれているかということをまず見ます。
 
 #### Issue・Pull Request、そして最新コミット日時
 
-ふたつめの基準として、GitHub上にあるIssueやPull Requestの件数と最新コミット日時です。
-先ほどの利用実績で挙げた例は、公開されてからある程度時間が経過し、広く使われるようになったライブラリのみ使える判断材料です。
-つまり定番と言われるライブラリに対してしか、判断材料として使えないということです。
+基準のふたつ目として、GitHub上にあるIssueやPull Requestの件数と最新コミット日時です。
+利用実績で見るのは公開されてからある程度時間が経過し、広く使われるようになったライブラリのみ使える判断材料です。
+つまり定番と言われるライブラリに対してのみ判断材料として使えます。
 
-そこで使える判断基準がIssueやPull Requestの件数と最新コミット日時です。
-最新コミット日がたとえば6か月前だった場合、IssueやPull Requestの多さは「放置されているから」ということになります。
+そこでIssueやPull Requestの件数と最新コミット日時を見ます。
+たとえば最新コミット日が6か月前だった場合、IssueやPull Requestの多さは「放置されているから」ということになります。
 放置されたライブラリを使う場合、自分達でなんとかしないといけなくなる場面が増えてしまいます。
 
-たとえば、放置されたライブラリに何らかのセキュリティ的な欠陥が見つかったとしても、自分達で対処しないといけません。
-また、プログラミングの世界には変化がたびたび訪れます。
-しかし放置されたライブラリを使い続けるのであれば、その変化にも自分達で対処しないといけません。
+自分達でなんとかするのであればいいですが、そうでない場合は活発なライブラリを選ぶのがいいです。
 
 #### ソースコードの流れを把握しやすい
 
-3つめの基準として、ソースコードが流れを把握しやすいか見ます。
-理由は、何か困ったときにドキュメントを見るのですが、それでも解決できない場合はソースコードを読む必要があるためです。
-そのときに、ソースコードの流れを把握できなかった場合、解決方法が見つからずつらくなります。
+基準の3つ目として、ソースコードの流れを把握しやすいか見ます。
+何か困ったときにドキュメントを見ますが、それでも解決できない場合はソースコードを読む必要があるためです。
+その時にソースコードの流れを把握できなかった場合、解決方法が見つからずつらくなります。
 
-全体把握しやすいライブラリとしては、例えば[Backbone.js](http://backbonejs.org/)が挙げられます。
-[ソースコード](https://github.com/jashkenas/backbone/blob/master/backbone.js)はまとまりの単位が小さいため、流れを追いやすいです。
-また、ソースコードの行数も1,877行（2015/7/10現在）なので、全体を読もうと思えば読めます。
+全体把握しやすいライブラリとしてたとえば[Backbone.js](http://backbonejs.org/)が挙げられます。
+[ソースコード](https://github.com/jashkenas/backbone/blob/master/backbone.js)はまとまりの単位が小さいため流れを追いやすいです。
+ソースコードの行数も1,877行（2015/7/10現在）なので全体を読もうと思えば読めます。
 
 #### ドキュメントがそろっている
 
-4つめの基準として、ライブラリにドキュメントがあり、かつ読みやすいかを見ます。もちろん両方そろっているのが好ましいです。
-両方そろっている例としては、[flipsnap.js](http://hokaccha.github.io/js-flipsnap/)が挙げられます。
+基準の4つ目として、ライブラリにドキュメントがあり、かつ読みやすいかを見ます。もちろん両方そろっているのが好ましいです。
+両方そろっている例としては[flipsnap.js](http://hokaccha.github.io/js-flipsnap/)が挙げられます。
 
-flipsnap.jsはドキュメントに次の項目がよくまとまっています。そのため、使い方に困らないライブラリとなっています。
-また[ソースコード自体](https://github.com/hokaccha/js-flipsnap/blob/master/flipsnap.js)も、まとまりの単位が小さく読みやすいものとなっています。
+flipsnap.jsはドキュメントに次の項目がよくまとまっています。そのため使い方に困らないライブラリとなっています。
 
 - どういった環境に対応しているか
 - どのような準備をすれば動作するようになるか
@@ -150,31 +150,31 @@ flipsnap.jsはドキュメントに次の項目がよくまとまっています
 
 ## ライブラリの選定CSS編
 
-ここまで、ライブラリ選定時の基準について書いてきました。ここからは、実際にライブラリ選定をしていきます。
-まずはじめに、CSSのライブラリから選定していきます。
+ここまでライブラリ選定時の基準について書いてきました。ここからは実際にライブラリ選定をしていきます。
+はじめにCSSのライブラリから選定していきます。
 
-今回、CSSのライブラリは[Bootstrap](https://github.com/twbs/bootstrap)のテーマである、[Nico](http://kubosho.github.io/Nico/)を使います。
+今回CSSのライブラリは[Bootstrap](https://github.com/twbs/bootstrap)のテーマである[Nico](http://kubosho.github.io/Nico/)を使います。
 
-選定した理由としては、今回デザイナーがいない中、ラブライブ!参加者募集サイトの見た目をアニメに近づけたいという思いがありました。
-ラブライブ!参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているため、Bootstrapを使うことにしました。
+選定した理由としては、今回デザイナーがいない中ラブライブ!参加者募集サイトの見た目をアニメに近づけたいという思いがありました。
+ラブライブ!参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているためBootstrapを使うことにしました。
 
-また、ラブライブ!参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。
-なので、今回のために[Honoka - 日本語も美しく表示できるBootstrapテーマ](http://honokak.osaka/)というbootstrapのテーマを元にNicoというBootstrapを作りました。
+ラブライブ!参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。
+なので今回のために[Honoka - 日本語も美しく表示できるBootstrapテーマ](http://honokak.osaka/)を元にNicoというBootstrapのテーマを作りました。
 
 ## ライブラリの選定JavaScript編
 
-次に、JavaScriptのライブラリを選定していきます。
+次にJavaScriptのライブラリを選定していきます。
 今回JavaScript側で実装する機能として、カルーセルがあります。
 
-カルーセルは、[Nike](http://www.nike.com/jp/ja_jp/) などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。
-このカルーセルを実現するためのライブラリは、[lory](http://meandmax.github.io/lory/)にします。
+カルーセルは[Nike](http://www.nike.com/jp/ja_jp/) などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。
+このカルーセルを実現するためのライブラリは[slick](http://kenwheeler.github.io/slick/)にします。
+slickを使うために[jQuery](http://jquery.com/)も使います。
 
-選定した理由はふたつあります。
-理由のひとつめとして、外部ライブラリに依存せず、loryだけを読みこめばカルーセルの実装をおこなえることが挙げられます。
-理由のふたつめとして、loryは全体像が把握しやすいことです。
-全体像が把握しやすいということは、何か困ったことがあってソースコードを読むときでもなんとかなるということです。
+選定した理由は2つあります。
+ひとつ目として、ドキュメントがそろっておりカルーセルを実装する時に困らないためです。これによりやりたい事がすぐ実現できます。
+ふたつ目として、slickは開発が活発な事です。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。
 
 なお、カルーセルでの表示に無限ループがいらなければ[flipsnap.js](http://hokaccha.github.io/js-flipsnap/)もおすすめです。
-また、jQueryに依存するライブラリでは[slick](http://kenwheeler.github.io/slick/)や、[Owl Carousel](http://owlgraphic.com/owlcarousel/)がよく使われます。
+jQueryに依存するライブラリでは他に[Owl Carousel](http://owlgraphic.com/owlcarousel/)がよく使われます。
 
-これで、ライブラリの選定が終わりました。次章からはサイトの実装をしていきます。
+これでライブラリの選定が終わりました。次章からはサイトの実装をしていきます。
