fix(ch01): 1つ2つ => ひとつふたつ

--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -147,19 +147,19 @@ Excelがない場合はGoogle Driveのスプレッドシートも最低限な機
 また1ページごとにワイヤーフレームと仕様書は必要です。
 
 ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。
-ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、1つずつ解説していきます。
+ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、ひとつずつ解説していきます。
 
-気をつけること1つ目として、要素は色もしくは形で分けるように書くことです。
+気をつける事のひとつ目として、要素は色もしくは形で分けるように書くことです。
 ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。
 さらに動作の要素を入れると、スクロール・ポップアップなどがあります。
 これらを見分けがつくように分けて書くことをおすすめします。
 
-気をつけること2つ目として、ワイヤーフレームに余計な情報を入れないということです。
+気をつけることのふたつ目として、ワイヤーフレームに余計な情報を入れないということです。
 ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないのがいいです。
 なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。そのため、余計な情報があると資料は分かりづらくなり、混乱を招きます。
 グラフィックやUIの方向性を決めるのは、アートディレクターです。そのため、企画資料としては見やすいようにすることが最優先です。
 
-気をつけること3つ目として、仕様書は箇条書きにすることです。
+気をつけることの3つ目として、仕様書は箇条書きにすることです。
 それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。
 
 ## 今回のワイヤーフレームと仕様書について
