--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -156,8 +156,8 @@ Excelがない場合はGoogle Driveのスプレッドシートも最低限な機
 
 気をつけることのふたつ目として、ワイヤーフレームに余計な情報を入れないということです。
 ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないのがいいです。
-なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。そのため、余計な情報があると資料は分かりづらくなり、混乱を招きます。
-グラフィックやUIの方向性を決めるのは、アートディレクターです。そのため、企画資料としては見やすいようにすることが最優先です。
+なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。
+グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。
 
 気をつけることの3つ目として、仕様書は箇条書きにすることです。
 それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。
