fix(ch01): 入れないのがいい => 入れないほうがいい
fix #84

--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -155,7 +155,7 @@ Excelがない場合はGoogle Driveのスプレッドシートも最低限な機
 これらを見分けがつくように分けて書くことをおすすめします。
 
 気をつけることのふたつ目として、ワイヤーフレームに余計な情報を入れないということです。
-ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないのがいいです。
+ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。
 なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。
 グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。
 
