fix(ch02): 募集サイト => 参加者募集サイト
fix #87

--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -21,7 +21,7 @@
 
 では実際に要件定義をしていきます。
 まずどんなサイトを作るかというところから始めます。
-今回は「ラブライブ!」というアイドルコンテストの募集サイトを作ります。
+今回は「ラブライブ!」というアイドルコンテストの参加者募集サイトを作ります。
 
 手順としてはまずターゲットユーザーを定義します。そしてターゲットユーザーにどんな体験を与えたいのか考えます。
 今回は主に見てもらいたいユーザーとして、スクールアイドルが挙げられます。
