--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -1,10 +1,10 @@
 # サイト開発の準備
 
-この章ではラブライブ!募集サイトを実装する前の準備について書きます。
+この章ではラブライブ!参加者募集サイトを実装する前の準備について書きます。
 
 ## 必要なツールの準備
 
-はじめに、ラブライブ!募集サイトの実装で必要なツールを準備します。
+はじめに、ラブライブ!参加者募集サイトの実装で必要なツールを準備します。
 最低限必要なものを列挙していくと以下のものがあります。
 
 - ソースコードを書くためのエディターもしくはIDE
