fix(ch02): 開発版について説明を少し追記
fix #89

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -28,7 +28,7 @@ WindowsやOS Xには次のブラウザーが最初からインストールされ
 
 しかしサイト開発ではこれらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。
 他にインストールしておいたほうが良いブラウザーはGoogle ChromeやMozilla Firefoxがあります。
-できれば、開発版をインストールしておくと、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。
+できれば開発者向けに提供されている開発版をインストールしたほうが、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。
 
 - Windows
   - Edge、Internet Explorer
