fix(ch0*): ライブステージ => ライブステージページ

--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -70,7 +70,7 @@
 ラブライブ!の状況をネットで生中継するページだと思われます。
 参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。これは一体どういうことでしょうか？
 これは参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。
-ライブステージ内にある要素をアニメのキャプチャ画像から推測してみると、以下の要素で構成されているように見えます。
+ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、以下の要素で構成されているように見えます。
 
 - 映像タイトル
 - 出演者
@@ -126,9 +126,9 @@ Excelがない場合はGoogle Driveのスプレッドシートも最低限な機
 ### 今回のサイトマップについて
 
 要件整理をきちんとまとめれば、サイトマップはほぼ考えずに作れると思います。
-今回作るのはトップとライブステージの2ページです。またライブステージ内にポップアップ画面を設計しました。
+今回作るのはトップとライブステージページの2ページです。またライブステージページ内にポップアップ画面を設計しました。
 
-一番上層のページをトップとして下層にライブステージを書きます。
+一番上層のページをトップとして下層にライブステージページを書きます。
 他に外部リンクであるSNSボタンをつけて完成です。
 今回は極めて簡単な内容のためこれで終わりです。
 
@@ -200,7 +200,7 @@ Excelがない場合はGoogle Driveのスプレッドシートも最低限な機
 今回は工数が足りないため少し改造しSNSコメントという似ている機能へ変更しました。
 「何かをコメントする」体験は変えず、より工数の少ないものに変えられたと思います。
 
-![ライブステージのワイヤーフレーム](ch01/04.jpg)
+![ライブステージページのワイヤーフレーム](ch01/04.jpg)
 
 ### ほかポップアップ
 
