--- a/draft/ch03.md
+++ b/draft/ch03.md
@@ -1,11 +1,11 @@
-# トップページ・ライブステージページ共通の構造を作る
+# トップ・ライブステージページ共通の構造を作る
 
 いよいよ、サイトを作っていきます。
-まずはサイト共通の構造を今回作るトップページとライブステージから洗い出し、それをマークアップしていきます。
+まずはサイト共通の構造をトップとライブステージページから洗い出し、それをマークアップしていきます。
 
 ## 共通の構造を洗い出し
 
-トップページやライブステージのアニメキャプチャ画像から共通構造を抜き出すと、次に挙げる3つが共通構造となります。
+トップページやライブステージページのアニメキャプチャ画像から共通構造を抜き出すと、次に挙げる3つが共通構造となります。
 
 - ヘッダー
 - グローバルナビゲーション
@@ -25,7 +25,7 @@
 ## ファイル構成
 
 今回作成するサイトのファイル構成を考えていきます。
-ファイル構成は次のとおりとなります。`index.html`はトップページ、`livestage.html`はライブステージ用のHTMLとなります。
+ファイル構成は次のとおりとなります。`index.html`はトップページ、`livestage.html`はライブステージページ用のHTMLとなります。
 ディレクトリーとしては`external`・`styles`・`scripts`・`images`の4つがあり、その中に各ファイルを置く想定です。
 
 ```
