--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -13,9 +13,8 @@
 
 ### なぜ要件定義をするのか
 
-最初に要件定義をすることで、企画書の更新頻度を下げることができます。
-このことで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。
-これにより一気にサイトを作ることが可能です。
+最初に要件定義をすることで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。
+これによりサイトをより良い物にする作業へ時間を割く事ができます。
 
 ### ラブライブ!参加者募集サイトの要件定義
 
@@ -28,11 +27,11 @@
 この参加者募集サイトを見た後にスクールアイドルが応募してくれるような体験を作ることが大事です。
 
 次に機能です。今回は工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。
-このように期限と実装期間から現実的な妥協をする判断も要件定義の一部です。
+このように期限と開発期間から現実的な範囲で判断する事も要件定義の一部となります。
 
 ## 要素を整理する
 
-サイト内のボタン・画像・テキストなど、さまざまな情報表示・動作するものをサイトの「要素」と呼びます。
+サイト内のボタン・画像・テキストなど、さまざまな表示・動作する情報を「要素」と呼びます。
 どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。
 そのため要素を置く場所が合理的なのか判断するため、ターゲットユーザーの分析が必要となります。
 ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え設計するべきです。
@@ -84,7 +83,7 @@
 今回は「工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作る」ということでした。
 つまり他のページについて要素整理は必要なく、ここで終わらせることができます。
 今回、どこまで資料が必要なのかは要件定義の段階で明確にしていました。
-そのため余計な作業はなくなり、無駄な時間を過ごすことがなくなります。
+そのため余計な作業はなくなり、効率的に開発を進める事ができます。
 
 ここからは今回のサイトについて推測を書いていきます。よければ参考にしてください。
 
