fix(ch03): 「だいたい」を書く位置の調整
fix #93

--- a/draft/ch03.md
+++ b/draft/ch03.md
@@ -12,12 +12,12 @@
 - フッター
 
 これら共通構造にサイトの各ページへたどれるリンクを置くことで、どのページからもサイト内にあるページへ行くことができます。
-そのため、今回のような多岐に渡る情報を提供するサイトでは、ヘッダー・グローバルナビゲーション・フッターの3つがだいたいあります。
+そのため今回のような多岐に渡る情報を提供するサイトでは、だいたいヘッダー・グローバルナビゲーション・フッターの3つがあります。
 
-また、ヘッダー・グローバルナビゲーション・フッターを使ったサイト構成は多く見られるため、訪問者も見慣れていることが期待できます。
+またヘッダー・グローバルナビゲーション・フッターを使ったサイト構成は多く見られるため、訪問者も見慣れていることが期待できます。
 つまりどこに主となる情報があり、ナビゲーションはどこにあるか、初めてサイトへ来た人にも分かってもらえるという効果も期待できます。
 
-特に今回は主に見てもらいたい層として、スクールアイドルというコンピューター・リテラシーが一定ではない人たちのため、分かりやすさ重視にしたと思われます。
+特に今回は、主に見てもらいたい層としてスクールアイドルというコンピューター・リテラシーが一定ではない人たちのため、分かりやすさ重視にしたと思われます。
 
 ![トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](ch03/lovelive-screenshot-top.jpg)
 ![ライブステージページ（ラブライブ！第2期 3話より）© プロジェクトラブライブ！](ch03/lovelive-screenshot-livestage.jpg)
