fix(ch03): 解説文とコードの位置が離れていたのでくっつけるようにした
fix #94

--- a/draft/ch03.md
+++ b/draft/ch03.md
@@ -96,13 +96,7 @@
 基礎部分のマークアップが終わったので、次にヘッダーをマークアップしていきます。
 ヘッダーにはサイトのタイトルロゴと、メールマガジンやSNS、ヘルプなどのリンクがあります。
 
-今回はCSSライブラリとして、BootstrapのテーマであるNicoを使っているため、各要素の`class`属性にBootstrapで定義されているクラス名を定義します。
-
-作らないページについては、図のように`a`要素の`href`属性に`#`を入れておきます。
-こうすることで、作っていないページの検索が楽になることを狙っています。
-
-Bootstrapにはないクラス名を定義する際、図のように`ll-`という接頭辞を付けています（**l** ove **l** ive）。
-これはBootstrapで定義されているクラス名と競合しないように、安全策で接頭辞を付けています。
+今回はCSSライブラリとしてBootstrapのテーマであるNicoを使っているため、各要素の`class`属性にBootstrapで定義されているクラス名を定義します。
 
 ```html
 <header id="ll-header" class="navbar navbar-default">
@@ -121,9 +115,15 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 </header>
 ```
 
+作らないページについては、図のように`a`要素の`href`属性に`#`を入れておきます。
+こうすることで、作っていないページの検索が楽になることを狙っています。
+
 ```html
 <a href="#">Mail magazine</a>
 ```
+
+Bootstrapにはないクラス名を定義する際、図のように`ll-`という接頭辞を付けています（**l** ove **l** ive）。
+これはBootstrapで定義されているクラス名と競合しないように、安全策で接頭辞を付けています。
 
 ```html
 <h1 class="navbar-brand ll-logo">LoveLive!</h1>
