fix(ch01): なぜ要件定義をするのか => 要件定義をする理由
fix #98

--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -11,10 +11,10 @@
 
 それぞれ大まかではなく細かく書いたほうがいいです。
 
-### なぜ要件定義をするのか
+### 要件定義をする理由
 
 最初に要件定義をすることで「これも入れたい」といった思いつきのアイデアに影響されず、作業が巻き戻ることを最小限に抑えられます。
-これによりサイトをより良い物にする作業へ時間を割く事ができます。
+これにより、サイトをより良い物にする作業へ時間を割く事ができます。
 
 ### ラブライブ!参加者募集サイトの要件定義
 
