fix(ch0*): 数字表記ではなく「はじめに」「次に」「最後に」という形式にした
fix #99

--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -148,17 +148,17 @@ Excelがない場合はGoogle Driveのスプレッドシートも最低限な機
 ワイヤーフレームはPowerPointとExcelのどちらか好きなほうを使います。仕様書はExcelをおすすめします。
 ワイヤーフレームや仕様書は作る際に3つ気をつけたいことがあります。それらを、ひとつずつ解説していきます。
 
-気をつける事のひとつめとして、要素は色もしくは形で分けるように書くことです。
+はじめに気をつける事として、要素は色もしくは形で分けるように書くことです。
 ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。
 さらに動作の要素を入れると、スクロール・ポップアップなどがあります。
 これらを見分けがつくように分けて書くことをおすすめします。
 
-気をつけることのふたつめとして、ワイヤーフレームに余計な情報を入れないということです。
+次に気をつける事として、ワイヤーフレームに余計な情報を入れないということです。
 ワイヤーフレームはあくまで要素がページ内のどこにあるか示す資料です。そのため色など不要な情報はなるべく入れないほうがいいです。
 なぜならデザイナーはグラフィックとUIの制作に、参考資料としてワイヤーフレームを使うためです。余計な情報があると資料は分かりづらくなり混乱を招きます。
 グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。
 
-気をつけることの3つめとして、仕様書は箇条書きにすることです。
+最後に気をつける事として、仕様書は箇条書きにすることです。
 それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。
 
 ## 今回のワイヤーフレームと仕様書について
