fix(ch03): code要素相当の装飾が抜けていた
fix #100

--- a/draft/ch03.md
+++ b/draft/ch03.md
@@ -133,7 +133,7 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 
 グローバルナビゲーションは、サイト内の主要なページへリンクしているものです。
 
-はじめにnav要素で全体を囲みます。nav要素は主要なページへリンクしている箇所で使われる要素となります。
+はじめに`nav`要素で全体を囲みます。`nav`要素は主要なページへリンクしている箇所で使われる要素となります。
 各要素の`class`属性にはBootstrapで定義されているクラス名を定義します。
 先ほどと同じく今回作らないページについては、図のように`a`要素の`href`属性に`#`を入れておきます。
 
