fix(ch02): エディターやIDE => エディターもしくはIDE
refs #104

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -15,7 +15,7 @@
 
 ### エディターやIDE
 
-はじめに、ソースコードを書くためのエディターやIDE（統合開発環境）を用意します。
+はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。
 エディターはWindow・OS X共にAtomやSublime Textがよく使われています。
 IDEはWebStormやNetBeansがよく使われています。
 またWindowsであればVisual Studio Community EditionがおすすめのIDEです。
