fix(ch02): エディターとIDEの特徴を書いて、目的別にどちらがいいかを書いた
fix #104

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -13,12 +13,17 @@
 
 これらについて、ひとつずつ説明していきます。
 
-### エディターやIDE
+### エディターもしくはIDE
 
 はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。
-エディターはWindow・OS X共にAtomやSublime Textがよく使われています。
-IDEはWebStormやNetBeansがよく使われています。
-またWindowsであればVisual Studio Community EditionがおすすめのIDEです。
+エディターとIDEですが、エディターはIDEと比べて自分で設定できる部分が多いです。
+そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかってしまう事もあります。
+IDEはインストールした時からある程度の設定がされています。その代わりエディターと比べて拡張性は低いです。
+
+なのでより自分好みの設定にしたい場合はエディターを、設定をいろいろいじるのが面倒な場合はIDEを使うといいです。
+
+エディターはWindows・OS X共にAtomやSublime Textがよく使われています。
+IDEはWebStormやNetBeans、Visual Studio Community Editionがよく使われています。
 
 ### ブラウザー
 
