fix(ch02): なぜ最初からインストールされているブラウザー以外もインストールするのか理由を追記した
fix #105

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -28,16 +28,19 @@ IDEはWebStormやNetBeans、Visual Studio Community Editionがよく使われて
 ### ブラウザー
 
 次に、サイトを表示確認するためにブラウザーの用意をします。
-WindowsやOS Xには次のブラウザーが最初からインストールされています。
-
-しかしサイト開発ではこれらのブラウザーだけではなく、複数ブラウザーで表示を確認する必要があります。
-他にインストールしておいたほうが良いブラウザーはGoogle ChromeやMozilla Firefoxがあります。
-できれば開発者向けに提供されている開発版をインストールしたほうが、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。
+WindowsやOS Xの最新バージョンには次のブラウザーが最初からインストールされています。
 
 - Windows
   - Edge、Internet Explorer
 - OS X
   - Safari
+
+しかしサイト開発ではこれらのブラウザーだけではなく、他のブラウザーでも表示を確認する必要があります。
+他にインストールしておいたほうがいいブラウザーは、Google ChromeやMozilla Firefoxがあります。
+Google ChromeやMozilla Firefoxは、最初からインストールされているブラウザーと比較した場合でも遜色ないもしくは上回るシェアがあります。
+つまりEdgeやInternet Explorer、Safariだけではサイトを見る人の環境をカバーし切れないため、他のブラウザーもインストールしておく必要があります。
+
+また開発者向けに提供されている開発版をインストールしたほうが、事前に次期バージョンでハマりそうな点が分かるのでおすすめです。
 
 ### GitとGitHub
 
