fix(ch03): 二重否定気味だった文章を修正
fix #106

--- a/draft/ch03.md
+++ b/draft/ch03.md
@@ -247,7 +247,7 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 ```
 
 スクリーンショットは次のとおりになります。
-Bootstrapを読み込んだ上で、Bootstrapに定義されているクラス名を`class`属性へ適宜書いていたため、殺風景ではない見た目になっています。
+Bootstrapを読み込んで、Bootstrapに定義されているクラス名を`class`属性へ書いていたため、それなりの見た目になっています。
 しかし見た目がアニメのキャプチャ画像と違うところがあるため、CSSで微調整をしていきます。
 
 ![HTMLだけで作ったサイト](ch03/common-html.jpg)
