--- a/draft/ch04.md
+++ b/draft/ch04.md
@@ -1,25 +1,20 @@
 # トップページを作る
 
-第3章では共通の構造部分を作っていきました。
-そこで作ったHTMLを元に、この章ではトップページを作っていきます。
-
-はじめに、第3章の共通部分ではヘッダーやフッターなどはマークアップしましたが、`main`要素の中身は空だったと思います。
-この章では、空のままだった`main`要素の中をHTMLでマークアップしていきます。
+第3章では共通の構造部分を作っていきました。そこではヘッダーやフッターなどはマークアップしましたが、`main`要素の中身は空だったと思います。
+この章では空のままだった`main`要素の中をHTMLでマークアップしていきます。
 
 ```html
 <main>
 </main>
 ```
 
-## トップページ全体の見た目を整える
-
 ## カルーセル部分のマークアップ
 
-まずカルーセル部分のマークアップをしていきます。
-カルーセルは第2章でも説明しましたが、[Nike](http://www.nike.com/jp/ja_jp/)などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。
+カルーセル部分のマークアップをしていきます。
+あらためてカルーセルの説明をすると、[Nike](http://www.nike.com/jp/ja_jp/)などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。
 
 今回カルーセルの実装に使う[slick](http://kenwheeler.github.io/slick/)用に次のHTMLを用意します。
-とはいっても、切り替え表示させる画像を`js_slides ll-slides`というクラスを付けた`div`要素で囲むだけです。
+とはいっても切り替え表示させる画像を`js_slides ll-slides`というクラスを付けた`div`要素で囲むだけです。
 
 ```html
 <div class="js_slides ll-slides">
@@ -30,13 +25,13 @@
 
 ## ページネーション部分のマークアップ
 
-次にカルーセルと連携したページネーション部分のマークアップをしていきます。
+カルーセルと連携したページネーション部分のマークアップをしていきます。
 ページネーションを画像で示すと、図の赤丸部分になります。
 
 ![ページネーション（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](ch04/pagination.jpg)
 
-アニメではフッター部分に入っているページネーションですが、フッター内にページネーションを含める実装はあまり見ないものです。
-そのため今回は`main`要素内へ、ページネーションを含めるようにします。
+アニメではフッター部分に入っているページネーションですが、フッター内にページネーションを含める実装はあまり見ません。
+そのため`main`要素内へ、ページネーションを含めるようにします。
 
 ページネーションは表示される順番が決まっているため、意図的に順序づけられた項目リストを示す`ol`要素を使います。
 ページネーションは後ほどCSSでスタイルを適用したり、JavaScriptでカルーセルと連携させたりします。
@@ -48,51 +43,10 @@
 </ol>
 ```
 
-## カルーセルの見た目を整える
+## ここまでのHTMLまとめ
 
-カルーセルに使う要素の見た目を整えます。
-スタイル定義は簡単で、ウィンドウの描画領域が狭いときに画像をはみ出させないよう、`max-width`というプロパティで要素幅の最大値を指定します。
-
-```css
-/* トップページ：カルーセル内の画像 */
-.ll-slides img {
-  max-width: 100%;
-}
-```
-
-次に、カルーセルと連携させるページネーションの見た目を整えます。
-ここで適用するCSSは次のとおりになります。
-
-ページネーションのマークアップに`ol`要素を使っているため、●の左横に数字が表示されています。
-その左横の数字を消すために、`.ll-slides-pagination`に対して`list-style-type: none;`と指定し、数字を無くします。
-
-あとはページネーションを中央寄せかつ横並びに表示したり、前景色の指定をしています。
-
-```css
-/* トップページ：カルーセル連携ページネーションの外枠 */
-.ll-slides-pagination {
-  list-style-type: none;
-  text-align: center;
-}
-
-/* トップページ：カルーセル連携ページネーションの各要素 */
-.ll-slides-pagination li {
-  display: inline-block;
-  color: #ff64b1;
-}
-
-/* トップページ：カルーセル連携ページネーションの現在のページを示す要素 */
-.ll-slides-pagination .ll-slides-pagination__active {
-  color: #fff;
-}
-```
-
-## ここまでのHTML・CSSまとめ
-
-トップページのHTML・CSSについてはこれで完成です。
-ここまでのHTML・CSSをまとめると次のとおりになります。
-
-### トップページのHTML
+トップページのHTMLについてはこれで完成です。
+ここまでのHTMLをまとめると次のとおりになります。
 
 ```html
 <!DOCTYPE html>
@@ -166,93 +120,47 @@
 </html>
 ```
 
+## カルーセルの見た目を整える
+
+カルーセルに使う要素の見た目を整えます。スタイル定義は簡単でウィンドウの描画領域が狭いときに画像をはみ出させないよう、`max-width`というプロパティで要素幅の最大値を指定します。
+
+```css
+/* トップページ：カルーセル内の画像 */
+.ll-slides img {
+  max-width: 100%;
+}
+```
+
+次に、カルーセルと連携させるページネーションの見た目を整えます。
+ここで適用するCSSは次のとおりになります。
+
+ページネーションのマークアップに`ol`要素を使っているため、●の左横に数字が表示されています。
+その左横の数字を消すために`.ll-slides-pagination`に対して`list-style-type: none;`と指定して数字を無くします。
+
+あとはページネーションを中央寄せかつ横並びに表示したり、前景色の指定をしています。
+
+```css
+/* トップページ：カルーセル連携ページネーションの外枠 */
+.ll-slides-pagination {
+  list-style-type: none;
+  text-align: center;
+}
+
+/* トップページ：カルーセル連携ページネーションの各要素 */
+.ll-slides-pagination li {
+  display: inline-block;
+  color: #ff64b1;
+}
+
+/* トップページ：カルーセル連携ページネーションの現在のページを示す要素 */
+.ll-slides-pagination .ll-slides-pagination__active {
+  color: #fff;
+}
+```
+
 ### トップページのCSS
 
 ```css
-/* サイトのヘッダー */
-#ll-header {
-  margin-bottom: 0;
-}
-
-/* サイトのロゴ */
-#ll-header .ll-logo {
-  height: auto;
-  margin-top: 15px;
-  padding: 15px;
-}
-
-/* サイトのグローバルナビゲーション */
-#ll-nav {
-  min-height: 0;
-  margin-bottom: 0;
-  border-width: 0;
-}
-
-/* サイトのグローバルナビゲーション内の各アイテム */
-#ll-nav li {
-  margin-right: 0;
-}
-
-/* サイトのグローバルナビゲーション内の各リンク */
-#ll-nav li > a {
-  margin-top: 0;
-  margin-bottom: 0;
-  border-radius: 0;
-  color: #fff;
-  text-transform: uppercase;
-}
-/* グローバルナビゲーションの各描画領域ごとのスタイル定義 */
-@media (min-width: 768px) {
-  #ll-nav li > a {
-    padding: 0.75em 1.5em;
-    border-right: 1px solid #fff;
-  }
-
-  #ll-nav li:first-child > a {
-    border-left: 1px solid #fff;
-  }
-}
-@media (min-width: 890px) {
-  #ll-nav li > a {
-    padding: 0.75em 2em;
-  }
-}
-@media (min-width: 1000px) {
-  #ll-nav li > a {
-    padding: 0.75em 2.5em;
-  }
-}
-@media (min-width: 1150px) {
-  #ll-nav li > a {
-    padding: 0.75em 3.2em;
-  }
-}
-@media (min-width: 1330px) {
-  #ll-nav li > a {
-    padding: 0.75em 4em;
-  }
-}
-
-/* グローバルナビゲーションの現在位置を示すスタイル */
-#ll-nav .active > a {
-  position: relative;
-  pointer: default;
-  pointer-events: none;
-  background-color: #ff50ac;
-  color: #fff;
-}
-
-/* グローバルナビゲーションの現在位置を示すスタイル */
-#ll-nav .active > a::after {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  border-bottom: 5px solid #ffdc00;
-}
-
 /* トップページ：カルーセル内の画像 */
 .ll-slides img {
   max-width: 100%;
@@ -280,34 +188,10 @@
 
 トップページのHTMLマークアップやCSSによるスタイル適用が終わったので、JavaScriptを使ってカルーセルの実装をします。
 
-## JavaScriptの準備
-
-はじめに、JavaScriptのソースコード全体を`(function() { ... });`で囲みます。
-理由は、定義した変数や関数が他のJavaScriptと競合しないようにするためです。
-`(function() { ... })();`を書かなかった場合、他のJavaScriptと競合してしまい正常に動作しなくなる場合があります。
-
-またjQueryを使う場合は`(function() { ... })();`の前に`$`を書きます。
-つまり`$(function() { ... })();`と書きます。
-`$`を書く理由は、ブラウザーがHTMLを読み込んで解釈した後にJavaScriptを実行させるためです。
-HTMLを解釈した後にJavaScriptの実行をしないと、JavaScript内でHTMLの要素を取得できない可能性があるためです。
-
-また、`$(function() { ... })();`の中には`"use strict";`という文字列を書いています。
-これは、JavaScriptでやってしまうミスの一部をエラーとして検出してくれるものです。
-将来に備えていくつかの単語を使えなくする（たとえば`let`や`yield`など）効果もあるので、`"use strict";`は書いても損はありません。
-
-これらをまとめると次のソースコードになります。
-
-```javascript
-$(function() {
-  "use strict";
-
-  // ここにソースコードを書いていく
-});
-```
-ここまで書いたところで、`$(function() { ... })();`の中に書くソースコードについて説明していきます。
-ただ、ソースコードを書き始める前に、処理の流れを洗い出しておきしょう。
+JavaScriptを書き始める前に、処理の流れを洗い出しておきしょう。
 今回は次の流れでカルーセルやカルーセルと連携したページネーション（以下ページネーション）を実装していきます。
 
+1. 他のJavaScriptと競合しないようにする
 1. カルーセルのためにHTML要素を取得する
 1. カルーセルの実装をする
 1. ページネーションの実装をする
@@ -317,13 +201,36 @@ $(function() {
 
 処理の流れを洗い出したところで、上から順に説明します。
 
-## カルーセルで使うためにHTMLの要素を取得する
+## 他のJavaScriptと競合しないようにする
 
-はじめに、JavaScriptでHTMLの要素を扱えるようにします。
+はじめに定義した変数や関数が他のJavaScriptと競合しないようにするため、JavaScriptのソースコード全体を`(function() { ... });`で囲みます。
+`(function() { ... })();`を書かなかった場合、他のJavaScriptと競合してしまい正常に動作しなくなる場合があります。
+
+jQueryを使う場合は`(function() { ... })();`の前に`$`を書きます。
+つまり`$(function() { ... })();`となります。
+`$`を書く理由はブラウザーがHTMLを読み込んで解釈した後にJavaScriptを実行させるためです。
+HTMLを解釈した後にJavaScriptの実行をしない場合、JavaScript内でHTMLの要素を取得できない可能性があるためです。
+
+また、`$(function() { ... })();`の中には`"use strict";`という文字列を書いています。
+これはJavaScriptでミスしやすい物の一部をエラーとして検出してくれるものです。
+将来に備えていくつかの単語を使えなくする（たとえば`let`や`yield`など）効果もあるので、`"use strict";`は書いても損はありません。
+
+ここまでをまとめると次のソースコードになります。
+
+```javascript
+$(function() {
+  "use strict";
+
+  // ここにソースコードを書いていく
+});
+```
+## カルーセルのためにHTMLの要素を取得する
+
+JavaScriptでHTMLの要素を扱えるようにします。
 これはjQueryの`$`関数を使って、HTMLの要素をJavaScriptから次のとおり取得します。
 
 準備の節では、ブラウザーがJavaScriptをHTMLの解釈後に実行するため`$`関数を使いました。
-ここでは、HTMLの要素をJavaScriptで利用できるようにするため`$`関数を使います。
+ここではHTMLの要素をJavaScriptで利用できるようにするため`$`関数を使います。
 jQueryの`$`関数はこのように万能なものとなります。
 
 ```javascript
@@ -334,17 +241,17 @@ var paginationItemElms = $(".js_slides-pagination li");
 
 ## カルーセルの実装をする
 
-HTMLの要素を取得できるようにしたら、カルーセルの実装をしていきます。
+HTMLの要素を取得したらカルーセルの実装をしていきます。
 今回カルーセルの実装をする上でslickというライブラリを使っていきます。
-ここでは次のように、slickを使えるよう初期化する関数と、どのページがいま表示されているか示すための関数を実装します。
+このslickを使えるよう初期化する関数と、どのページがいま表示されているか示すための関数を実装していきます。
 
 まずカルーセルの元になる`Carousel`関数から説明します。
-`Carousel`関数ではパラメーターとして、次のふたつがあります
+`Carousel`関数はパラメーターとして、次のふたつがあります
 
 - カルーセルの要素を示す`carouselE`
 - カルーセルの設定を示す`config`
 
-これらのパラメーターを元に、`Carousel`関数でslickが使えるようにします。
+これらのパラメーターを元に`Carousel`関数でslickが使えるようにします。
 
 次に`currentIndex`を説明します。これはページネーションで使う関数となります。
 `currentIndex`はカルーセルでいま表示しているページがどこか示す数字を返す関数です。
@@ -372,7 +279,7 @@ Carousel.prototype.currentIndex = function() {
 - ページネーション内の要素を示す`paginationItemElms`
 - アクティブなページを示す`activePageName`
 
-これらのパラメーターを元に、`CarouselPagination`関数でページネーションが使えるようにします。
+これらのパラメーターを元に`CarouselPagination`関数でページネーションが使えるようにします。
 あとはカルーセルの表示切り替え時に`activatePage`関数と`deactivatePage`関数を呼び出してページネーションの表示を変えられるようにします。
 
 ```javascript
@@ -395,7 +302,7 @@ CarouselPagination.prototype.deactivatePage = function() {
 };
 ```
 
-次からはいよいよカルーセルやページネーションを動作するようにします。
+いよいよカルーセルやページネーションが動作するようにします。
 
 ## カルーセルが動くようにする
 
