fix(ch04): 数字の「表示」の表現を統一した
- 数字を消すために => 数字の表示を消すために
- 指定して数字を無くします => 指定します

fix #95

--- a/articles/draft/ch04.md
+++ b/articles/draft/ch04.md
@@ -135,7 +135,7 @@
 ここで適用するCSSは次のとおりになります。
 
 ページネーションのマークアップに`ol`要素を使っているため、●の左横に数字が表示されています。
-その左横の数字を消すために`.ll-slides-pagination`に対して`list-style-type: none;`と指定して数字を無くします。
+左横の数字の表示を消すために`.ll-slides-pagination`に対して`list-style-type: none;`と指定します。
 
 あとはページネーションを中央寄せかつ横並びに表示したり、前景色の指定をしています。
 
