fix(ch04): JavaScriptのコーディング時にミスしやすい旨を明確にした
fix #101

--- a/articles/draft/ch04.md
+++ b/articles/draft/ch04.md
@@ -212,7 +212,7 @@ jQueryを使う場合は`(function() { ... })();`の前に`$`を書きます。
 HTMLを解釈した後にJavaScriptの実行をしない場合、JavaScript内でHTMLの要素を取得できない可能性があります。
 
 また、`$(function() { ... })();`の中には`"use strict";`という文字列を書いています。
-これはJavaScriptでミスしやすい物の一部をエラーとして検出してくれるものです。
+これはJavaScriptをコーディングする上でミスしやすい物の一部をエラーとして検出してくれるものです。
 将来に備えていくつかの単語を使えなくする（たとえば`let`や`yield`など）効果もあるので、`"use strict";`は書いても損はありません。
 
 ここまでをまとめると次のソースコードになります。
