write(ch04): トップページのマークアップをするという事を明確にした
refs #81

--- a/articles/draft/ch04.md
+++ b/articles/draft/ch04.md
@@ -1,7 +1,8 @@
 # トップページを作る
 
-第3章では共通の構造部分を作っていきました。そこではヘッダーやフッターなどはマークアップしましたが、`main`要素の中身は空だったと思います。
-この章では空のままだった`main`要素の中をHTMLでマークアップしていきます。
+第3章では共通の構造部分を作っていきました。
+そこではヘッダーやフッターなどはマークアップしましたが、`main`要素の中身は空だったと思います。
+この章では、トップページの空のままだった`main`要素の中をHTMLでマークアップしていきます。
 
 ```html
 <main>
