fix(ch04): JavaScriptからいじる事を示すクラス名の接頭辞を`js_`としていたのを`js-`とした
@yoshiko-pg

JavaScriptからいじるという事を明確にしたくてアンダースコア区切りにしていましたが、jsと接頭辞をつけている時点でJavaScriptからいじる事が分かると思うので、指摘のとおりハイフン区切りにしました

refs #81

--- a/articles/draft/ch04.md
+++ b/articles/draft/ch04.md
@@ -15,10 +15,10 @@
 あらためてカルーセルの説明をすると、[Nike](http://www.nike.com/jp/ja_jp/)などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。
 
 今回カルーセルの実装に使う[slick](http://kenwheeler.github.io/slick/)用に次のHTMLを用意します。
-とはいっても切り替え表示させる画像を`js_slides ll-slides`というクラスを付けた`div`要素で囲むだけです。
+とはいっても切り替え表示させる画像を`js-slides ll-slides`というクラスを付けた`div`要素で囲むだけです。
 
 ```html
-<div class="js_slides ll-slides">
+<div class="js-slides ll-slides">
   <img src="images/image_01.jpg" alt="">
   <img src="images/image_02.jpg" alt="">
 </div>
@@ -38,7 +38,7 @@
 ページネーションは後ほどCSSでスタイルを適用したり、JavaScriptでカルーセルと連携させたりします。
 
 ```html
-<ol class="js_slides-pagination ll-slides-pagination">
+<ol class="js-slides-pagination ll-slides-pagination">
   <li>●</li>
   <li>●</li>
 </ol>
@@ -94,12 +94,12 @@
 </header>
 
 <main>
-  <div class="js_slides ll-slides">
+  <div class="js-slides ll-slides">
     <img src="images/image_01.jpg" alt="">
     <img src="images/image_02.jpg" alt="">
   </div>
 
-  <ol class="js_slides-pagination ll-slides-pagination">
+  <ol class="js-slides-pagination ll-slides-pagination">
     <li>●</li>
     <li>●</li>
   </ol>
@@ -235,9 +235,9 @@ JavaScriptでHTMLの要素を扱えるようにします。
 jQueryの`$`関数はこのように万能なものとなります。
 
 ```javascript
-var carouselE = $(".js_slides");
-var paginationE = $(".js_slides-pagination");
-var paginationItemElms = $(".js_slides-pagination li");
+var carouselE = $(".js-slides");
+var paginationE = $(".js-slides-pagination");
+var paginationItemElms = $(".js-slides-pagination li");
 ```
 
 ## カルーセルの実装をする
@@ -385,9 +385,9 @@ $(function() {
 
   //////////////////////////////////////////////////
 
-  var carouselE = $(".js_slides");
-  var paginationE = $(".js_slides-pagination");
-  var paginationItemElms = $(".js_slides-pagination li");
+  var carouselE = $(".js-slides");
+  var paginationE = $(".js-slides-pagination");
+  var paginationItemElms = $(".js-slides-pagination li");
 
   var carousel = new Carousel(carouselE, {
     autoplay: true,
