write(ch04): なぜ接頭辞に`js-`と付けるのか理由を書いた
refs #81

--- a/articles/draft/ch04.md
+++ b/articles/draft/ch04.md
@@ -16,6 +16,7 @@
 
 今回カルーセルの実装に使う[slick](http://kenwheeler.github.io/slick/)用に次のHTMLを用意します。
 とはいっても切り替え表示させる画像を`js-slides ll-slides`というクラスを付けた`div`要素で囲むだけです。
+接頭辞に`js-`と付けているクラスはJavaScriptから触る事を明確にするため付けています。
 
 ```html
 <div class="js-slides ll-slides">
