--- a/articles/draft/ch04.md
+++ b/articles/draft/ch04.md
@@ -14,7 +14,7 @@
 カルーセル部分のマークアップをしていきます。
 あらためてカルーセルの説明をすると、[Nike](http://www.nike.com/jp/ja_jp/)などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。
 
-今回カルーセルの実装に使う[slick](http://kenwheeler.github.io/slick/)用に次のHTMLを用意します。
+今回カルーセルの実装に[slick](http://kenwheeler.github.io/slick/)というライブラリを使います。slick用として次のHTMLを用意します。
 とはいっても切り替え表示させる画像を`js-slides ll-slides`というクラスを付けた`div`要素で囲むだけです。
 接頭辞に`js-`と付けているクラスはJavaScriptから触る事を明確にするため付けています。
 
