write(ch01): 箇条書きした部分と文章を関連付けるようにした
refs #103

--- a/articles/draft/ch01.md
+++ b/articles/draft/ch01.md
@@ -11,7 +11,7 @@
 - どんなサイトを作るか
 - どんな機能が必要か
 
-要件定義する時は次のように自問自答をすると答えを導く事ができます。
+要件定義する時は次のように自問自答をすると、どんなサイトを作りどの機能が必要か導けます。
 
 - 質問：どんなサイトを作りたいですか。
 - 回答：「ラブライブ！」というイベントの情報を発信するサイトを作りたいです。
